# wallets

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  setup.py
authorised_payees/: ap_wallet.clvm  ap_wallet.py  ap_wallet_a_functions.py
coloured_coins/: cc.clvm  cc_runnable.py  cc_wallet.py  coloured_coins.clvm  lock_coins.clvm  test_cc.py  test_lock.py
docs/: glossary.md  part1_basics.md
puzzles/: load_clvm.py  p2_delegated_puzzle_or_hidden_puzzle.py
recoverable_wallet/: recoverable_wallet.py  recoverable_wallet_runnable.py
standard_wallet/: wallet.py  wallet_runnable.py
tests/: test_AP_transactions.py  test_coloured_coins.py
